--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/server": "^11.10.0",
     "@hookform/resolvers": "^2.9.11",
     "@mantine/core": "^6.0.1",
+    "@mantine/form": "^6.0.1",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
     "@types/node": "18.15.0",
@@ -29,5 +30,12 @@
   },
   "devDependencies": {
     "windicss-webpack-plugin": "^1.7.8"
+  },
+  "pretteir": {
+    "semi": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "avoid"
   }
 }
