--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "^6.0.1",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
+    "@supabase/supabase-js": "^2.10.0",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
